// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > async > stdout 1`] = `""`;

exports[`fixtures > circular > stdout 1`] = `""`;

exports[`fixtures > env > stdout 1`] = `""`;

exports[`fixtures > error-parse > stderr 1`] = `
"<root>/lib/index.js:2
   throw err /* ↓ Check stack trace ↓ */
   ^

Error: ParseError: \`import\` can only be used in \`import 
 <cwd>/index.ts
    at Object.<anonymous> (<root>/bin/dynot)
    at Module._compile (internal/modules/cjs/loader)
    at Module._extensions..js (internal/modules/cjs/loader)
    at Module.load (internal/modules/cjs/loader)
    at Module._load (internal/modules/cjs/loader)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main)
    at internal/main/run_main_module

Node.js v18.16.0"
`;

exports[`fixtures > error-parse > stdout 1`] = `""`;

exports[`fixtures > error-runtime > stderr 1`] = `
"<root>/lib/index.js:2
   throw err /* ↓ Check stack trace ↓ */
   ^

TypeError: The \\"listener\\" argument must be of type function. Received undefined
    at checkListener (events)
    at _addListener (events)
    at process.addListener (events)
    at <cwd>/index.ts
    at dynot (<root>/dist/dynot)
    at Object.<anonymous> (<root>/bin/dynot)
    at Module._compile (internal/modules/cjs/loader)
    at Module._extensions..js (internal/modules/cjs/loader)
    at Module.load (internal/modules/cjs/loader)
    at Module._load (internal/modules/cjs/loader)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main)
    at internal/main/run_main_module {
  code: 'ERR_INVALID_ARG_TYPE'
}

Node.js v18.16.0"
`;

exports[`fixtures > error-runtime > stdout 1`] = `""`;

exports[`fixtures > esm > stdout 1`] = `""`;

exports[`fixtures > exotic > stdout 1`] = `""`;

exports[`fixtures > hashbang > stdout 1`] = `""`;

exports[`fixtures > import-map > stdout 1`] = `"{ alias: 'alias' }"`;

exports[`fixtures > json > stdout 1`] = `""`;

exports[`fixtures > mixed > stderr 1`] = `
"<root>/lib/index.js:2
   throw err /* ↓ Check stack trace ↓ */
   ^

Error: Cannot find module 'nyxppath'
Require stack:
- <cwd>/esm.js
    at Module._resolveFilename (internal/modules/cjs/loader)
    at Function.resolve (internal/modules/cjs/helpers)
    at _resolve (<root>/dist/dynot)
    at dynot (<root>/dist/dynot)
    at <cwd>/esm.js
    at dynot (<root>/dist/dynot)
    at <cwd>/index.js
    at dynot (<root>/dist/dynot)
    at Object.<anonymous> (<root>/bin/dynot)
    at Module._compile (internal/modules/cjs/loader)
    at Module._extensions..js (internal/modules/cjs/loader)
    at Module.load (internal/modules/cjs/loader)
    at Module._load (internal/modules/cjs/loader)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main)
    at internal/main/run_main_module {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    '<cwd>/esm.js'
  ]
}

Node.js v18.16.0"
`;

exports[`fixtures > mixed > stdout 1`] = `""`;

exports[`fixtures > native > stdout 1`] = `""`;

exports[`fixtures > proto > stdout 1`] = `""`;

exports[`fixtures > pure-esm-dep > stdout 1`] = `""`;

exports[`fixtures > syntax > stdout 1`] = `""`;

exports[`fixtures > typescript > stdout 1`] = `""`;
